Candidate Templates Updated

--- a/candidate/templates/candidate/edit_profile.html
+++ b/candidate/templates/candidate/edit_profile.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
               <br />
-              {{ form }}
+              {{ form|crispy }}
             </fieldset>
             <div class="form-group">
               <button class="btn btn-lg btn-primary btn-block" type="submit">
