--- a/candidate/templates/candidate/profile.html
+++ b/candidate/templates/candidate/profile.html
@@ -1,5 +1,6 @@
 {% extends "users/layout.html" %} 
  {% comment %} GitHub ma Profile Page nu Template che Joi levu {% endcomment %}
+ {% comment %} ################Search Template(With Profile Photo)######## {% endcomment %}
  <html>
     <head>
 
@@ -10,33 +11,36 @@
 <link href="{% static 'profile.css' %}" rel="stylesheet">     
     </head>
     <body>
-        
+       
 <div class="container">
   <div class="row">
     <div class="col-md-6">
       <div class="card card-signin my-5">
         <div class="card-body">
-          <h3 class="text-center">Profile Data</h3>
+          <h3 class="text-center">Profile Data : {{data.first_Name}}</h3>
           <br />
           <form class="form-signin">
             <div class="form-group">
               <p>Name: {{ data.first_Name }}</p>
-              <p>Email: {{ u.email }}</p>
-              <p>Country: {{ profile.country.name }}</p>
+              <p>Middle Name: {{ data.middle_Name }}</p>
+              {% comment %} <p>Last Name: {{ profile.country.name }}</p>
               <p>Location: {{ profile.location }}</p>
               <p>Graduation Year: {{ profile.grad_year }}</p>
-              <p>Looking For: {{ profile.looking_for }}</p>
-              {% if data.resume %}
+              <p>Looking For: {{ profile.looking_for }}</p> {% endcomment %}
+              <p>Last Name : {{ data.last_Name}} </p>
+              <p>Country: : {{ data.counrty.name}} </p>
+              <p>Location : {{ data.location}} </p>
               <p>
                 Resume:
                 <a href="{{ data.resume.url }}">Click to View/Download</a>
               </p>
-              {% else %}
-              <p>Resume: Not Provided</p>
-              {% endif %} 
+              <p>Passing Year : {{ data.passing_year}} </p>
+              <p>Looking For : {{ data.looking_for}} </p>
+              <p>Experience  : {{ data.experience}} </p>
+              
 
-
-              {% if request.user == u %}
+              {{user}}
+                {% if request.user == user %}
                   <hr class="my-4" />
                   <a
                   class="btn btn-warning btn-block"
@@ -44,12 +48,12 @@
                   >Edit Profile</a
                   ><br />
 
-                  <a class="btn btn-primary btn-block" href="{% url 'saved-jobs' %}"
+                  <a class="btn btn-primary btn-block" href="#"
                   >Saved Jobs</a
                   ><br />
                   <a
                   class="btn btn-success btn-block"
-                  href="{% url 'applied-jobs' %}"
+                  href="#"
                   >Applied Jobs</a
                   >
               {% endif %}
@@ -63,13 +67,15 @@
         <div class="card-body">
           <h3 class="text-center">Skills ({{ skills.count }})</h3>
           <br />
-          {% if request.user != u %}
+          {% if request.user != user %}
           <ol>
+            
             {% for skill in skills %}
-            <li>{{skill.skill}}</li>
+            <li>{{skill.user_skills}}</li>
             {% endfor %}
           </ol>
           {% else %}
+          
           <form class="form-signin" method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
@@ -89,17 +95,18 @@
           {% if skills %}
           <form
             class="form-signin"
-            action="{% url 'skill-delete' %}"
+            action="#"
             method="POST"
           >
-            {% csrf_token %} {% for skill in skills %}
+            {% csrf_token %}
+            {% for skill in skills %}
             <div>
               <input
                 class="mr-2"
                 type="checkbox"
-                value="{{ skill.id }}"
+                value="{{ skill.skills }}"
                 name="choices"
-              />{{ skill.skill }}
+              />{{ skill.skills }}
             </div>
             {% endfor %}
             <br />
@@ -121,6 +128,141 @@
 </div>
 
 </body>
+
+
+<H1> New Portion </H1>
+
+
+<div class="container">
+  <div class="main-body">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <div class="d-flex flex-column align-items-center text-center">
+              <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+              <div class="mt-3">
+                <h4>{{data.first_Name}}</h4>
+                <p class="text-secondary mb-1">Full Stack Developer</p>
+                <p class="text-muted font-size-sm">Bay Area, San Francisco, CA</p>
+                <button class="btn btn-primary">Follow</button>
+                <button class="btn btn-outline-primary">Message</button>
+              </div>
+            </div>
+            <hr class="my-4">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe me-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Website</h6>
+                <span class="text-secondary">https://bootdey.com</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github me-2 icon-inline"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>Github</h6>
+                <span class="text-secondary">bootdey</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter me-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
+                <span class="text-secondary">@bootdey</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram me-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
+                <span class="text-secondary">bootdey</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook me-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
+                <span class="text-secondary">bootdey</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="card">
+          <div class="card-body">
+            <div class="row mb-3">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Full Name</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                <input type="text" class="form-control" value="John Doe">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Email</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                <input type="text" class="form-control" value="john@example.com">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Phone</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                <input type="text" class="form-control" value="(239) 816-9029">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Mobile</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                <input type="text" class="form-control" value="(320) 380-4539">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-sm-3">
+                <h6 class="mb-0">Address</h6>
+              </div>
+              <div class="col-sm-9 text-secondary">
+                <input type="text" class="form-control" value="Bay Area, San Francisco, CA">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-3"></div>
+              <div class="col-sm-9 text-secondary">
+                <input type="button" class="btn btn-primary px-4" value="Save Changes">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="d-flex align-items-center mb-3">Project Status</h5>
+                <p>Web Design</p>
+                <div class="progress mb-3" style="height: 5px">
+                  <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>Website Markup</p>
+                <div class="progress mb-3" style="height: 5px">
+                  <div class="progress-bar bg-danger" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>One Page</p>
+                <div class="progress mb-3" style="height: 5px">
+                  <div class="progress-bar bg-success" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>Mobile Template</p>
+                <div class="progress mb-3" style="height: 5px">
+                  <div class="progress-bar bg-warning" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>Backend API</p>
+                <div class="progress" style="height: 5px">
+                  <div class="progress-bar bg-info" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
  {% endblock content %}
+
+
+
 
 
