--- a/candidate/templates/candidate/profile.html
+++ b/candidate/templates/candidate/profile.html
@@ -6,7 +6,11 @@
 
 {% load static %} 
 {% load crispy_forms_tags %}
+{% load countries %}
 {% block content %} 
+   {% comment %} #Comment or UnCommen   #Comment or UnComment -> countries and get_countries {% endcomment %}
+{% get_countries as countries %}    t
+
 <br /><br />
 <link href="{% static 'profile.css' %}" rel="stylesheet">     
     </head>
@@ -28,7 +32,7 @@
               <p>Graduation Year: {{ profile.grad_year }}</p>
               <p>Looking For: {{ profile.looking_for }}</p> {% endcomment %}
               <p>Last Name : {{ data.last_Name}} </p>
-              <p>Country: : {{ data.counrty.name}} </p>
+              <p>Country:  {{ data.country.name }} </p>
               <p>Location : {{ data.location}} </p>
               <p>
                 Resume:
