Changed Views Into Class Based Views

--- a/candidate/templates/candidate/profile.html
+++ b/candidate/templates/candidate/profile.html
@@ -9,7 +9,7 @@
 {% load countries %}
 {% block content %} 
    {% comment %} #Comment or UnCommen   #Comment or UnComment -> countries and get_countries {% endcomment %}
-{% get_countries as countries %}    t
+{% get_countries as countries %}    
 
 <br /><br />
 <link href="{% static 'profile.css' %}" rel="stylesheet">     
