Search and All Jobs Views added

--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -129,7 +129,7 @@
           height="30"
           class="d-inline-block align-top mr-3"
           alt=""
-        /><b>Fenice</b>
+        /><b>Skicruit</b>
       </a>
       <button
         class="navbar-toggler"
@@ -187,23 +187,23 @@
     {% endif %}
     <div class="container">{% block content %}{% endblock content %}</div>
 
-    {% comment %} <footer>
+     <footer>
       <hr my-2 />
       <div class="row">
         <div class="col-sm-6 col-md-4 footer-navigation">
-          <h3>Fenice</h3>
+          <h3>Skicruit</h3>
           <p class="links">
-            <a href="{% url 'detail-candidates' %}">Job Seekers</a
+            <a href="#">Job Seekers</a
             ><strong> · </strong
             ><a href="{% url 'detail-recruiters' %}">Recruiters</a
-            ><strong> · </strong><a href="{% url 'pricing' %}">Pricing</a>
+            ><strong> · </strong><a href="#">Pricing</a>
             <strong> · </strong
-            ><a href="{% url 'terms-of-service' %}">Terms of Service</a>
+            ><a href="#">Terms of Service</a>
             <strong> · </strong
-            ><a href="{% url 'privacy-policy' %}">Privacy Policy</a>
+            ><a href="#">Privacy Policy</a>
           </p>
           <p class="company-name">
-            Fenice @ 2020<br /><small class="text-muted"
+            Skicruit @ 2023<br /><small class="text-muted"
               >All rights reserved!</small
             ><br />
           </p>
@@ -211,19 +211,19 @@
         <div class="col-sm-6 col-md-4 footer-contacts">
           <div>
             <span class="fa fa-map-marker footer-contacts-icon"></span>
-            <p><span class="new-line-span">IIT BHU</span>Varanasi, India</p>
+            <p><span class="new-line-span">Ahmedabad</span> India</p>
           </div>
 
           <div>
             <i class="fa fa-envelope footer-contacts-icon"></i>
-            <p><a href="#" target="_blank">networkfenice@gmail.com</a></p>
+            <p><a href="#" target="_blank">skicruit@gmail.com</a></p>
           </div>
         </div>
         <div class="clearfix"></div>
         <div class="col-md-4 footer-about">
           <h4>About the company</h4>
           <p>
-            Fenice Networks mission is to make hiring easier. We aim to save
+            Skicruit Networks mission is to make hiring easier. We aim to save
             time for both job seekers and recruiters and to make the hiring
             process smoother. We continue to innovate and find new solutions to
             make hiring process simpler.
@@ -242,7 +242,7 @@
           >Image vectors by - www.freepik.com</a
         >
       </p>
-    </footer> {% endcomment %}
+    </footer>
 
     <!-- JS Files -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
