--- a/recruiter/templates/recruiter/selected_list.html
+++ b/recruiter/templates/recruiter/selected_list.html
@@ -13,7 +13,7 @@
         <span class="ml-3 mt-3">
           <a href="{% url 'profile-view' profile.slug %}">
             <h4 class="text-dark">
-              <b>{{profile.full_name}}</b>
+              <b>{{profile.first_Name}}</b>
             </h4>
           </a>
           <p style="font-size: 17px">
