--- a/candidate/templates/candidate/profile.html
+++ b/candidate/templates/candidate/profile.html
@@ -25,7 +25,7 @@
           <br />
           <form class="form-signin">
             <div class="form-group">
-              <p>Name: {{ data.first_Name }}</p>
+              <p>Name: {{ data.first_name }}</p>
               <p>Middle Name: {{ data.middle_Name }}</p>
               {% comment %} <p>Last Name: {{ profile.country.name }}</p>
               <p>Location: {{ profile.location }}</p>
@@ -99,7 +99,7 @@
           {% if skills %}
           <form
             class="form-signin"
-            action="#"
+            action="{% url 'skill-delete' %}"
             method="POST"
           >
             {% csrf_token %}
@@ -265,6 +265,7 @@
 </div>
 
 <H1>Another One</H1>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
 <div class="container">
@@ -273,7 +274,7 @@
         <div class="card-box text-center">
             <img src="https://bootdey.com/img/Content/avatar/avatar7.png" class="rounded-circle avatar-xl img-thumbnail" alt="profile-image">
 
-            <h4 class="mb-0">Nik G. Patel</h4>
+            <h4 class="mb-0"> {{ data.first_name }}</h4>
             <p class="text-muted">@webdesigner</p>
 
             <button type="button" class="btn btn-success btn-xs waves-effect mb-2 waves-light">Follow</button>
@@ -282,18 +283,18 @@
             <div class="text-left mt-3">
                 <h4 class="font-13 text-uppercase">About Me :</h4>
                 <p class="text-muted font-13 mb-3">
-                    Hi I'm Johnathn Deo,has been the industry's standard dummy text ever since the
-                    1500s, when an unknown printer took a galley of type.
+{{data.bio}}
                 </p>
-                <p class="text-muted mb-2 font-13"><strong>Full Name :</strong> <span class="ml-2">Nik G. Patel</span></p>
+                <p class="text-muted mb-2 font-13"><strong>Full Name :</strong> <span class="ml-2">{{data.first_name}}&nbsp;{{data.middle_name}}&nbsp;{{data.last_name}}</span></p>
 
                 <p class="text-muted mb-2 font-13"><strong>Mobile :</strong><span class="ml-2">(123)
                         123 1234</span></p>
 
                 <p class="text-muted mb-2 font-13"><strong>Email :</strong> <span class="ml-2 ">user@email.domain</span></p>
 
-                <p class="text-muted mb-1 font-13"><strong>Location :</strong> <span class="ml-2">USA</span></p>
-            </div>
+            <p class="text-muted mb-1 font-13"><strong>Location :</strong> <span class="ml-2">{{data.location}},{{data.country.name}}</span></p>
+            <p class="text-muted mb-2 font-13"><strong>Looking For :</strong> <span class="ml-2 ">{{data.looking_for}}</span></p>
+          </div>
 
             <ul class="social-list list-inline mt-3 mb-0">
                 <li class="list-inline-item">
@@ -310,55 +311,35 @@
                 </li>
             </ul>
         </div> <!-- end card-box -->
-
+      
         <div class="card-box">
             <h4 class="header-title">Skills</h4>
             <p class="mb-3">Everyone realizes why a new common language would be desirable</p>
-
-            <div class="pt-1">
-                <h6 class="text-uppercase mt-0">HTML5 <span class="float-right">90%</span></h6>
-                <div class="progress progress-sm m-0">
-                    <div class="progress-bar bg-purple" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
-                        <span class="sr-only">90% Complete</span>
-                    </div>
+          
+        
+        {% for skill in skills %}
+    <div class="pt-1">
+        <h6 class="text-uppercase mt-0">{{ skill.skills }} <span class="float-right"></span></h6>
+        <div class="progress progress-sm m-0">
+            {% if skill.proficiency_level == 'Beginner' %}
+                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+                    <span class="sr-only">Beginner</span>
                 </div>
-            </div>
-
-            <div class="mt-2 pt-1">
-                <h6 class="text-uppercase">PHP <span class="float-right">67%</span></h6>
-                <div class="progress progress-sm m-0">
-                    <div class="progress-bar bg-purple" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100" style="width: 67%">
-                        <span class="sr-only">67% Complete</span>
-                    </div>
+            {% elif skill.proficiency_level == "Intermediate" %}
+                <div class="progress-bar bg-waning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                    <span class="sr-only">Intermediate</span>
                 </div>
-            </div>
-
-            <div class="mt-2 pt-1">
-                <h6 class="text-uppercase">WordPress <span class="float-right">48%</span></h6>
-                <div class="progress progress-sm m-0">
-                    <div class="progress-bar bg-purple" role="progressbar" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100" style="width: 48%">
-                        <span class="sr-only">48% Complete</span>
-                    </div>
+            {% elif skill.proficiency_level == "Advanced" %}
+                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                    <span class="sr-only">Advanced</span>
                 </div>
-            </div>
+            {% endif %}
+        </div>
+    </div>
+{% endfor %}
 
-            <div class="mt-2 pt-1">
-                <h6 class="text-uppercase">Laravel <span class="float-right">95%</span></h6>
-                <div class="progress progress-sm m-0">
-                    <div class="progress-bar bg-purple" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
-                        <span class="sr-only">95% Complete</span>
-                    </div>
-                </div>
-            </div>
 
-            <div class="mt-2 pt-1">
-                <h6 class="text-uppercase">ReactJs <span class="float-right">72%</span></h6>
-                <div class="progress progress-sm m-0">
-                    <div class="progress-bar bg-purple" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 72%">
-                        <span class="sr-only">72% Complete</span>
-                    </div>
-                </div>
-            </div>
+            
 
         </div> <!-- end card-box-->
 
