Templates And UI Changes

--- a/recruiter/templates/recruiter/candidate_search.html
+++ b/recruiter/templates/recruiter/candidate_search.html
@@ -1,7 +1,6 @@
 {% extends "users/layout.html" %}
 {% load static %} 
 {% block content %}
-Think About Based On Skills ,Experience
 <br />
 <div>
   <h3 class="text-center">
@@ -45,7 +44,7 @@ Think About Based On Skills ,Experience
      <a href="{% url 'profile-view' profile.slug %}"> 
             
             <h4 class="text-dark">
-              <b>{{profile.first_Name}}</b>
+              <b>{{profile.first_name}}</b>
             </h4>
           </a>
           <p style="font-size: 17px">
