--- a/recruiter/templates/recruiter/view_job.html
+++ b/recruiter/templates/recruiter/view_job.html
@@ -52,6 +52,7 @@
     <!-- Header End -->
     </header>
     <main>
+        {% if request.user == job.user %}
 
         <!-- Hero Area Start-->
         <div class="slider-area ">
@@ -86,7 +87,7 @@
                                     </a>
                                     <ul>
                                         <li>{{job.company}}</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>{{job.country.name}}</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>{{job.city}},{{job.country.name}}</li>
                                         <li>{{job.salary}} &nbsp; LPA</li>
                                     </ul>
                                 </div>
@@ -108,6 +109,7 @@
                                     <h4>Required Knowledge, Skills, and Abilities</h4>
                                 </div>
                                <ul>
+                                   <li>{{job.skills}}</li>
                                    <li>System Software Development</li>
                                    <li>Mobile Applicationin iOS/Android/Tizen or other platform</li>
                                    <li>Research and code , libraries, APIs and frameworks</li>
@@ -150,7 +152,7 @@
                           
         
           <a
-            class="btn btn-warning btn-lg"
+            class="btn"
             href="{% url 'edit-job-post' job.slug %}"
             ><b>Edit Job</b></a
           >
@@ -172,114 +174,35 @@
                     </div>
                 </div>
             </div>
+            <a
+            class="btn btn-info btn-lg mr-2"
+            href="{% url 'applicant-list' job.slug %}"
+            ><b>Applicants List</b></a
+          >
+          <a
+            class="btn btn-success btn-lg mr-2"
+            href="{% url 'selected-list' job.slug %}"
+            ><b>Selected List</b></a
+          >
+          
+          <a
+            class="btn btn-warning btn-lg mr-2"
+            href="{% url 'edit-job-post' job.slug %}"
+            ><b>Edit Job Post</b></a
+          >
+          <a
+            class="btn btn-danger btn-lg"
+            href="{% url 'search-candidates' %}"
+            ><b>Search Relevant Candidates</b></a
+          >
         </div>
         <!-- job post company End -->
 
     </main>
-    <footer>
-        <!-- Footer Start-->
-        <div class="footer-area footer-bg footer-padding">
-            <div class="container">
-                <div class="row d-flex justify-content-between">
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                       <div class="single-footer-caption mb-50">
-                         <div class="single-footer-caption mb-30">
-                             <div class="footer-tittle">
-                                 <h4>About Us</h4>
-                                 <div class="footer-pera">
-                                     <p>Heaven frucvitful doesn't cover lesser dvsays appear creeping seasons so behold.</p>
-                                </div>
-                             </div>
-                         </div>
+   
+     
+                       
 
-                       </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                        <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
-                                <h4>Contact Info</h4>
-                                <ul>
-                                    <li>
-                                    <p>Address :Your address goes
-                                        here, your demo address.</p>
-                                    </li>
-                                    <li><a href="#">Phone : +8880 44338899</a></li>
-                                    <li><a href="#">Email : info@colorlib.com</a></li>
-                                </ul>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                        <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
-                                <h4>Important Link</h4>
-                                <ul>
-                                    <li><a href="#"> View Project</a></li>
-                                    <li><a href="#">Contact Us</a></li>
-                                    <li><a href="#">Testimonial</a></li>
-                                    <li><a href="#">Proparties</a></li>
-                                    <li><a href="#">Support</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                
-               <div class="row footer-wejed justify-content-between">
-                       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                          <!-- logo -->
-                          <div class="footer-logo mb-20">
-                            <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
-                          </div>
-                       </div>
-                       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                        <div class="footer-tittle-bottom">
-                            <span>5000+</span>
-                            <p>Talented Hunter</p>
-                        </div>
-                       </div>
-                       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                            <div class="footer-tittle-bottom">
-                                <span>451</span>
-                                <p>Talented Hunter</p>
-                            </div>
-                       </div>
-                       <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-                            <!-- Footer Bottom Tittle -->
-                            <div class="footer-tittle-bottom">
-                                <span>568</span>
-                                <p>Talented Hunter</p>
-                            </div>
-                       </div>
-               </div>
-            </div>
-        </div>
-        <!-- footer-bottom area -->
-        <div class="footer-bottom-area footer-bg">
-            <div class="container">
-                <div class="footer-border">
-                     <div class="row d-flex justify-content-between align-items-center">
-                         <div class="col-xl-10 col-lg-10 ">
-                             <div class="footer-copy-right">
-                                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                             </div>
-                         </div>
-                         <div class="col-xl-2 col-lg-2">
-                             <div class="footer-social f-right">
-                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                 <a href="#"><i class="fab fa-twitter"></i></a>
-                                 <a href="#"><i class="fas fa-globe"></i></a>
-                                 <a href="#"><i class="fab fa-behance"></i></a>
-                             </div>
-                         </div>
-                     </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer End-->
-    </footer>
 
 	<!-- JS here -->
 	
@@ -324,4 +247,19 @@
         
     </body>
 </html>
+
+
+  {% else %}
+  <div class="row">
+    <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
+      <div class="card card-signin my-5">
+        <div class="card-body">
+          <h3 class="text-center">You do not have access to this page!</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endif %}
+</div>
+
 {% endblock content %}
